배상목록 페이지 작업, 패널티 분류 삭제

--- a/src/main/resources/templates/page/home.html
+++ b/src/main/resources/templates/page/home.html
@@ -8,7 +8,7 @@
 	<ul>
 		<li>voc
 			<ul>
-				<li><a href="/basic/variable">voc 등록</a></li>
+				<li><a href="/voc/regist">voc 등록</a></li>
 			</ul>
 			<ul>
 				<li><a href="/voc/list">voc 목록</a></li>
@@ -16,7 +16,7 @@
 		</li>
 		<li>배상 목록
 			<ul>
-				<li><a href="/basic/variable">배상 목록</a></li>
+				<li><a href="/compensation/list">배상 목록</a></li>
 			</ul>
 		</li>
 	</ul>
