--- a/src/main/resources/templates/compensation/list.html
+++ b/src/main/resources/templates/compensation/list.html
@@ -11,20 +11,16 @@
 	<table border="1">
 		<tr>
 			<th>id</th>
-			<th>사유</th>
-			<th>배상대상</th>
+			<th>내용</th>
+			<th>배상금액</th>
 			<th>생성일</th>
-			<th>상세내용</th>
+			<th>voc정보</th>
 		</tr>
 		<tr th:each="list : ${response.body}">
 			<td th:text="${list.id}"></td>
-			<td th:text="${list.reason}"></td>
-			<td th:switch="${list.target}">
-				<span th:case="courier">택배사</span>
-				<span th:case="vendor">고객사</span>
-			</td>
-			
-			<td th:text="${list.createAt}">0</td>
+			<td th:text="${list.reparations}"></td>
+			<td th:text="${list.comment}"></td>
+			<td th:text="${list.createAt}"></td>
 			<td><a th:href="@{/voc/{id}(id = ${list.id})}">상세</a></td>
 		</tr>
 	</table>
